--- a/SubEthaEdit-Mac/SEEDocumentListWindowController.xib
+++ b/SubEthaEdit-Mac/SEEDocumentListWindowController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D38" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SEEDocumentListWindowController">
@@ -19,7 +19,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" resizable="YES"/>
             <windowCollectionBehavior key="collectionBehavior" moveToActiveSpace="YES" fullScreenAuxiliary="YES"/>
             <rect key="contentRect" x="196" y="240" width="300" height="400"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <value key="minSize" type="size" width="180" height="140"/>
             <value key="maxSize" type="size" width="1000" height="3000"/>
             <view key="contentView" id="2">
@@ -57,6 +57,14 @@
                                                     <rect key="frame" x="1" y="1" width="297" height="46"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
+                                                        <customView identifier="AvatarView" translatesAutoresizingMaskIntoConstraints="NO" id="JPV-3V-IN6" userLabel="Avatar View" customClass="SEEAvatarImageView">
+                                                            <rect key="frame" x="3" y="1" width="42" height="42"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="42" id="2aK-eB-YWP"/>
+                                                                <constraint firstAttribute="height" constant="42" id="MI6-pU-G0t"/>
+                                                            </constraints>
+                                                        </customView>
                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="99d-xq-E7k">
                                                             <rect key="frame" x="51" y="14" width="221" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -70,20 +78,6 @@
                                                                 <binding destination="7GF-iT-703" name="value" keyPath="objectValue.name" id="mHh-wn-wlH"/>
                                                             </connections>
                                                         </textField>
-                                                        <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0Rh-MB-7TX">
-                                                            <rect key="frame" x="3" y="1" width="42" height="42"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="42" id="YWX-TI-z7Q"/>
-                                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="adv-0C-3QL"/>
-                                                                <constraint firstAttribute="height" constant="42" id="vaI-wI-5Q2"/>
-                                                            </constraints>
-                                                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSUserGuest" id="D2v-Nd-6Ob"/>
-                                                            <connections>
-                                                                <binding destination="7GF-iT-703" name="toolTip" keyPath="objectValue.connection.toolTipString" id="dMB-N5-VnP"/>
-                                                                <binding destination="7GF-iT-703" name="value" keyPath="objectValue.image" id="iaf-Pj-YUc"/>
-                                                            </connections>
-                                                        </imageView>
                                                         <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sLz-ta-X1G">
                                                             <rect key="frame" x="271" y="13" width="23" height="19"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -116,16 +110,14 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="sLz-ta-X1G" firstAttribute="leading" secondItem="99d-xq-E7k" secondAttribute="trailing" constant="1" id="9gP-xl-ifF"/>
-                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="leading" secondItem="7GF-iT-703" secondAttribute="leading" constant="3" id="W0F-u1-Nq8"/>
-                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="top" secondItem="7GF-iT-703" secondAttribute="top" constant="3" id="aZ7-BF-5RR"/>
+                                                        <constraint firstItem="JPV-3V-IN6" firstAttribute="leading" secondItem="7GF-iT-703" secondAttribute="leading" constant="3" id="Aag-bs-dMd"/>
                                                         <constraint firstAttribute="trailing" secondItem="sLz-ta-X1G" secondAttribute="trailing" constant="3" id="dAl-Z2-Uja"/>
                                                         <constraint firstItem="99d-xq-E7k" firstAttribute="bottom" secondItem="sLz-ta-X1G" secondAttribute="bottom" id="eht-il-UWT"/>
                                                         <constraint firstItem="sLz-ta-X1G" firstAttribute="centerY" secondItem="7GF-iT-703" secondAttribute="centerY" id="fxJ-Ib-Nxh"/>
-                                                        <constraint firstItem="0Rh-MB-7TX" firstAttribute="centerY" secondItem="99d-xq-E7k" secondAttribute="centerY" id="hBg-jV-XoQ"/>
-                                                        <constraint firstItem="99d-xq-E7k" firstAttribute="leading" secondItem="0Rh-MB-7TX" secondAttribute="trailing" constant="8" symbolic="YES" id="jjl-L8-0yA"/>
+                                                        <constraint firstItem="JPV-3V-IN6" firstAttribute="top" secondItem="7GF-iT-703" secondAttribute="top" constant="3" id="lyK-gn-AOC"/>
+                                                        <constraint firstItem="99d-xq-E7k" firstAttribute="leading" secondItem="JPV-3V-IN6" secondAttribute="trailing" constant="8" id="ya8-Ub-8e6"/>
                                                     </constraints>
                                                     <connections>
-                                                        <outlet property="imageView" destination="0Rh-MB-7TX" id="zvU-lA-c31"/>
                                                         <outlet property="textField" destination="99d-xq-E7k" id="QnQ-Yw-dNe"/>
                                                     </connections>
                                                 </tableCellView>
@@ -418,7 +410,6 @@
         <image name="NSActionTemplate" width="14" height="14"/>
         <image name="NSAddTemplate" width="8" height="8"/>
         <image name="NSPathTemplate" width="13" height="10"/>
-        <image name="NSUserGuest" width="32" height="32"/>
         <image name="StatusPending" width="16" height="16"/>
     </resources>
 </document>
